Update pipeline.groovy