@@ -4,20 +4,38 @@ import static groovy.json.JsonOutput.*
 def call(Map param) {
     println prettyPrint(toJson(param))
     def build = new Build(this)
+test = """
+apiVersion: "v1"
+kind: "Pod"
+spec:
+  containers:
+  - name: node
+    image: docker.io/node:latest
+    imagePullPolicy: Always
+    command:
+    - cat
+    tty: true
+  
+  nodeSelector:
+    env: jenkins
+  restartPolicy: "Never"
+  securityContext: {}
+  
+"""
 pipeline {
-	agent {
-      label "${param.label}" 
-  }
-  environment {
-    MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
-}
+   agent {
+    kubernetes{
+          
+          yaml test
+    }
+   }
   stages {
   stage('checkout'){
         steps{          
              checkout([$class: 'GitSCM', branches: [
 				[name: "master"]
 				], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [
-				[ url: '']
+				[ url: 'https://github.com/DevopsRizwan/spring-helm-demo.git']
 					]])
         }  
     }
@@ -26,6 +44,8 @@ pipeline {
     stage('mvnBuild'){
         steps{
             script{
+		    
+		    prinln "maven"
                //build.buildMvn("${param.mvnPath}")
              
             }
@@ -34,7 +54,8 @@ pipeline {
 	
     stage('archive') {
         steps{
-            script{              
+            script{    
+		    println "Test"
              // mvnBuild.archiver("${param.artifactsPath}")
              }                         
            }        
